update getuserid